fix bug sidebar on mobile

--- a/client/src/pages/Shop/components/Layout/Layout.module.scss
+++ b/client/src/pages/Shop/components/Layout/Layout.module.scss
@@ -24,7 +24,7 @@
 }
 .custom-modal{
     width: 330px;
-    height: 100vh;
+    height: 100%;
     animation: fade 0.4s cubic-bezier(0,0.8,1,1);
     overflow-y: scroll;
     overscroll-behavior: contain;
